chart/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app1
spec:
  type: NodePort
  selector:
    app: sample-app1
  ports:
    - port: 80
